# latent-space-repr-el-market-curves

./: .gitignore  LICENSE  Makefile  README.md  config.yml  environment.yml  pyproject.toml
curves/: __init__.py  autoencoder.py  config.py  dataset.py  features.py  plots.py
curves/dim-reduct/: evaluate.py  isotonic_transform.py  predict.py  train.py
curves/misc/: .gitignore
curves/predictions/: hyperparams.py  predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
models/: .gitignore
notebooks/: curves_preprocessing.py  pca_kpca_umap.py
