[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "curves"
version = "0.0.1"
description = "A repository for reproducing the paper titled Latent Space Representation of Electricity Market Curves."
authors = [
  { name = "Martin Vyboh, Zuzana Chladna, Gabriela Grmanova, Maria Lucka" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "==3.9.19"


[tool.ruff]
line-length = 99
src = ["curves"]
include = ["pyproject.toml", "curves/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["curves"]
force-sort-within-sections = true

